--- a/package.json
+++ b/package.json
@@ -10,57 +10,58 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.0.1",
-    "babel-loader": "^7.1.4",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "create-react-class": "^15.6.3",
-    "css-loader": "^0.28.11",
-    "electron": "^2.0.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.9.1",
-    "fetch-mock": "^6.4.4",
-    "formik": "^1.0.2",
+    "css-loader": "^1.0.0",
+    "electron": "^3.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-react": "^7.11.1",
+    "fetch-mock": "^7.0.0-beta.1",
+    "formik": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
-    "immutability-helper": "^2.7.1",
-    "jest": "^23.1.0",
+    "immutability-helper": "^2.8.1",
+    "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.mapvalues": "^4.6.0",
-    "mini-css-extract-plugin": "^0.4.2",
+    "mini-css-extract-plugin": "^0.4.3",
     "nightmare": "^3.0.1",
     "node-sass": "^4.9.3",
     "popper": "^1.0.1",
-    "popper.js": "^1.14.3",
+    "popper.js": "^1.14.4",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
-    "react": "^16.3.2",
+    "react": "^16.5.2",
     "react-color": "^2.14.1",
-    "react-dom": "^16.3.2",
-    "react-icons": "^3.0.5",
-    "react-images": "^0.5.17",
+    "react-dom": "^16.5.2",
+    "react-icons": "^3.1.0",
+    "react-images": "^0.5.19",
     "react-redux": "^5.0.7",
-    "react-test-renderer": "^16.4.0",
+    "react-test-renderer": "^16.5.2",
     "react-toggle-switch": "^3.0.4",
-    "recharts": "^1.0.0-beta.10",
+    "recharts": "^1.2.0",
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sass-lint": "^1.12.1",
+    "sass-lint-auto-fix": "^0.14.1",
     "sass-loader": "^7.1.0",
-    "standard": "^11.0.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4",
+    "standard": "^12.0.1",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.8",
     "webpack-livereload-plugin": "^2.1.1",
-    "yup": "^0.26.2"
+    "yup": "^0.26.6"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack -d",
